# CrystalPeaks

./: .gitignore  CMakeLists.txt  README.md
src/: AudioEngine.cpp  AudioEngine.h  Main.cpp  MainComponent.cpp  MainComponent.h
src/meters/: MeterModule.h  ModuleStrip.cpp  ModuleStrip.h  SpectrumMeter.cpp  SpectrumMeter.h  StereoMeter.cpp  StereoMeter.h  WaveformMeter.cpp  WaveformMeter.h
